// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomStepEducation press next & save button 1`] = `
<div>
  <div
    class="maxWidth-96 marginRight-auto marginLeft-auto"
  >
    <p
      class="text arrayStepHeaderTitle fontSize-2xl fontWeight-700"
    >
      Add education
    </p>
    <p
      class="text arrayStepHeaderDescription"
    >
      Please tell us about your educational degree(s)
    </p>
    <div
      class="flexDirection-row justifyContent-center marginTop-8"
    >
      <button
        class="button md outline c-primary paddingRight-5 paddingLeft-5"
        type="button"
      >
        Add new
      </button>
      <button
        class="button md solid c-primary flex-1 marginLeft-5"
        type="button"
      >
        Save & Next
      </button>
    </div>
  </div>
</div>
`;

exports[`CustomStepEducation renders correctly 1`] = `
<div>
  <div
    class="maxWidth-96 marginRight-auto marginLeft-auto"
  >
    <p
      class="text arrayStepHeaderTitle fontSize-2xl fontWeight-700"
    >
      Add education
    </p>
    <p
      class="text arrayStepHeaderDescription"
    >
      Please tell us about your educational degree(s)
    </p>
    <form>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r0:"
        >
          School / Issuer
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r0:"
            name="schoolIssuer"
            placeholder="E.g. ABC School"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r1:"
        >
          Degree
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r1:"
            name="degree"
            placeholder="E.g. High School Diploma"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r2:"
        >
          Area of Study
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r2:"
            name="areaOfStudy"
            placeholder="E.g. Arts"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control display-inline-block width-1/2 paddingRight-1"
        role="group"
      >
        <label
          class="label"
          for=":r3:"
        >
          Start Year
        </label>
        <div
          class="root primary md fluid md fieldHalfWidth"
        >
          <select
            class="input"
            id=":r3:"
            name="startYear"
          >
            <option
              disabled=""
              hidden=""
              value=""
            >
              Select
            </option>
            <option
              value="2024"
            >
              2024
            </option>
            <option
              value="2023"
            >
              2023
            </option>
            <option
              value="2022"
            >
              2022
            </option>
            <option
              value="2021"
            >
              2021
            </option>
            <option
              value="2020"
            >
              2020
            </option>
            <option
              value="2019"
            >
              2019
            </option>
            <option
              value="2018"
            >
              2018
            </option>
            <option
              value="2017"
            >
              2017
            </option>
            <option
              value="2016"
            >
              2016
            </option>
            <option
              value="2015"
            >
              2015
            </option>
            <option
              value="2014"
            >
              2014
            </option>
            <option
              value="2013"
            >
              2013
            </option>
            <option
              value="2012"
            >
              2012
            </option>
            <option
              value="2011"
            >
              2011
            </option>
            <option
              value="2010"
            >
              2010
            </option>
            <option
              value="2009"
            >
              2009
            </option>
            <option
              value="2008"
            >
              2008
            </option>
            <option
              value="2007"
            >
              2007
            </option>
            <option
              value="2006"
            >
              2006
            </option>
            <option
              value="2005"
            >
              2005
            </option>
            <option
              value="2004"
            >
              2004
            </option>
            <option
              value="2003"
            >
              2003
            </option>
            <option
              value="2002"
            >
              2002
            </option>
            <option
              value="2001"
            >
              2001
            </option>
            <option
              value="2000"
            >
              2000
            </option>
            <option
              value="1999"
            >
              1999
            </option>
            <option
              value="1998"
            >
              1998
            </option>
            <option
              value="1997"
            >
              1997
            </option>
            <option
              value="1996"
            >
              1996
            </option>
            <option
              value="1995"
            >
              1995
            </option>
            <option
              value="1994"
            >
              1994
            </option>
            <option
              value="1993"
            >
              1993
            </option>
            <option
              value="1992"
            >
              1992
            </option>
            <option
              value="1991"
            >
              1991
            </option>
            <option
              value="1990"
            >
              1990
            </option>
            <option
              value="1989"
            >
              1989
            </option>
            <option
              value="1988"
            >
              1988
            </option>
            <option
              value="1987"
            >
              1987
            </option>
            <option
              value="1986"
            >
              1986
            </option>
            <option
              value="1985"
            >
              1985
            </option>
            <option
              value="1984"
            >
              1984
            </option>
            <option
              value="1983"
            >
              1983
            </option>
            <option
              value="1982"
            >
              1982
            </option>
            <option
              value="1981"
            >
              1981
            </option>
            <option
              value="1980"
            >
              1980
            </option>
            <option
              value="1979"
            >
              1979
            </option>
            <option
              value="1978"
            >
              1978
            </option>
            <option
              value="1977"
            >
              1977
            </option>
            <option
              value="1976"
            >
              1976
            </option>
            <option
              value="1975"
            >
              1975
            </option>
            <option
              value="1974"
            >
              1974
            </option>
            <option
              value="1973"
            >
              1973
            </option>
            <option
              value="1972"
            >
              1972
            </option>
            <option
              value="1971"
            >
              1971
            </option>
            <option
              value="1970"
            >
              1970
            </option>
            <option
              value="1969"
            >
              1969
            </option>
            <option
              value="1968"
            >
              1968
            </option>
            <option
              value="1967"
            >
              1967
            </option>
            <option
              value="1966"
            >
              1966
            </option>
            <option
              value="1965"
            >
              1965
            </option>
            <option
              value="1964"
            >
              1964
            </option>
            <option
              value="1963"
            >
              1963
            </option>
            <option
              value="1962"
            >
              1962
            </option>
            <option
              value="1961"
            >
              1961
            </option>
            <option
              value="1960"
            >
              1960
            </option>
            <option
              value="1959"
            >
              1959
            </option>
            <option
              value="1958"
            >
              1958
            </option>
            <option
              value="1957"
            >
              1957
            </option>
            <option
              value="1956"
            >
              1956
            </option>
            <option
              value="1955"
            >
              1955
            </option>
            <option
              value="1954"
            >
              1954
            </option>
            <option
              value="1953"
            >
              1953
            </option>
            <option
              value="1952"
            >
              1952
            </option>
            <option
              value="1951"
            >
              1951
            </option>
            <option
              value="1950"
            >
              1950
            </option>
          </select>
          <div
            class="icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,16c-0.3,0-0.5-0.1-0.7-0.3l-6-6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l5.3,5.3l5.3-5.3c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-6,6C12.5,15.9,12.3,16,12,16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="control display-inline-block width-1/2 paddingLeft-1"
        role="group"
      >
        <label
          class="label"
          for=":r4:"
        >
          Year Earned
        </label>
        <div
          class="root primary md fluid md fieldHalfWidth"
        >
          <select
            class="input"
            id=":r4:"
            name="yearEarned"
          >
            <option
              disabled=""
              hidden=""
              value=""
            >
              Select
            </option>
            <option
              value="2024"
            >
              2024
            </option>
            <option
              value="2023"
            >
              2023
            </option>
            <option
              value="2022"
            >
              2022
            </option>
            <option
              value="2021"
            >
              2021
            </option>
            <option
              value="2020"
            >
              2020
            </option>
            <option
              value="2019"
            >
              2019
            </option>
            <option
              value="2018"
            >
              2018
            </option>
            <option
              value="2017"
            >
              2017
            </option>
            <option
              value="2016"
            >
              2016
            </option>
            <option
              value="2015"
            >
              2015
            </option>
            <option
              value="2014"
            >
              2014
            </option>
            <option
              value="2013"
            >
              2013
            </option>
            <option
              value="2012"
            >
              2012
            </option>
            <option
              value="2011"
            >
              2011
            </option>
            <option
              value="2010"
            >
              2010
            </option>
            <option
              value="2009"
            >
              2009
            </option>
            <option
              value="2008"
            >
              2008
            </option>
            <option
              value="2007"
            >
              2007
            </option>
            <option
              value="2006"
            >
              2006
            </option>
            <option
              value="2005"
            >
              2005
            </option>
            <option
              value="2004"
            >
              2004
            </option>
            <option
              value="2003"
            >
              2003
            </option>
            <option
              value="2002"
            >
              2002
            </option>
            <option
              value="2001"
            >
              2001
            </option>
            <option
              value="2000"
            >
              2000
            </option>
            <option
              value="1999"
            >
              1999
            </option>
            <option
              value="1998"
            >
              1998
            </option>
            <option
              value="1997"
            >
              1997
            </option>
            <option
              value="1996"
            >
              1996
            </option>
            <option
              value="1995"
            >
              1995
            </option>
            <option
              value="1994"
            >
              1994
            </option>
            <option
              value="1993"
            >
              1993
            </option>
            <option
              value="1992"
            >
              1992
            </option>
            <option
              value="1991"
            >
              1991
            </option>
            <option
              value="1990"
            >
              1990
            </option>
            <option
              value="1989"
            >
              1989
            </option>
            <option
              value="1988"
            >
              1988
            </option>
            <option
              value="1987"
            >
              1987
            </option>
            <option
              value="1986"
            >
              1986
            </option>
            <option
              value="1985"
            >
              1985
            </option>
            <option
              value="1984"
            >
              1984
            </option>
            <option
              value="1983"
            >
              1983
            </option>
            <option
              value="1982"
            >
              1982
            </option>
            <option
              value="1981"
            >
              1981
            </option>
            <option
              value="1980"
            >
              1980
            </option>
            <option
              value="1979"
            >
              1979
            </option>
            <option
              value="1978"
            >
              1978
            </option>
            <option
              value="1977"
            >
              1977
            </option>
            <option
              value="1976"
            >
              1976
            </option>
            <option
              value="1975"
            >
              1975
            </option>
            <option
              value="1974"
            >
              1974
            </option>
            <option
              value="1973"
            >
              1973
            </option>
            <option
              value="1972"
            >
              1972
            </option>
            <option
              value="1971"
            >
              1971
            </option>
            <option
              value="1970"
            >
              1970
            </option>
            <option
              value="1969"
            >
              1969
            </option>
            <option
              value="1968"
            >
              1968
            </option>
            <option
              value="1967"
            >
              1967
            </option>
            <option
              value="1966"
            >
              1966
            </option>
            <option
              value="1965"
            >
              1965
            </option>
            <option
              value="1964"
            >
              1964
            </option>
            <option
              value="1963"
            >
              1963
            </option>
            <option
              value="1962"
            >
              1962
            </option>
            <option
              value="1961"
            >
              1961
            </option>
            <option
              value="1960"
            >
              1960
            </option>
            <option
              value="1959"
            >
              1959
            </option>
            <option
              value="1958"
            >
              1958
            </option>
            <option
              value="1957"
            >
              1957
            </option>
            <option
              value="1956"
            >
              1956
            </option>
            <option
              value="1955"
            >
              1955
            </option>
            <option
              value="1954"
            >
              1954
            </option>
            <option
              value="1953"
            >
              1953
            </option>
            <option
              value="1952"
            >
              1952
            </option>
            <option
              value="1951"
            >
              1951
            </option>
            <option
              value="1950"
            >
              1950
            </option>
          </select>
          <div
            class="icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,16c-0.3,0-0.5-0.1-0.7-0.3l-6-6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l5.3,5.3l5.3-5.3c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-6,6C12.5,15.9,12.3,16,12,16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r5:"
        >
          Description
        </label>
        <div
          class="root primary md fluid md multiline"
        >
          <textarea
            class="input"
            id=":r5:"
            name="description"
            placeholder="Share some of your learnings and accomplishments"
            rows="4"
            type="text"
          />
        </div>
      </div>
      <div
        class="flexDirection-row justifyContent-center marginTop-8"
      >
        <button
          class="button md text c-primary paddingRight-5 paddingLeft-5"
          type="button"
        >
          Skip
        </button>
        <button
          class="button md solid c-primary disabled flex-1"
          disabled=""
          type="submit"
        >
          Save & Next
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomStepEducation skip step 1`] = `
<div>
  <div
    class="maxWidth-96 marginRight-auto marginLeft-auto"
  >
    <p
      class="text arrayStepHeaderTitle fontSize-2xl fontWeight-700"
    >
      Add education
    </p>
    <p
      class="text arrayStepHeaderDescription"
    >
      Please tell us about your educational degree(s)
    </p>
    <form>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r6:"
        >
          School / Issuer
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r6:"
            name="schoolIssuer"
            placeholder="E.g. ABC School"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r7:"
        >
          Degree
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r7:"
            name="degree"
            placeholder="E.g. High School Diploma"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":r8:"
        >
          Area of Study
        </label>
        <div
          class="root primary md fluid md"
        >
          <input
            class="input"
            id=":r8:"
            name="areaOfStudy"
            placeholder="E.g. Arts"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="control display-inline-block width-1/2 paddingRight-1"
        role="group"
      >
        <label
          class="label"
          for=":r9:"
        >
          Start Year
        </label>
        <div
          class="root primary md fluid md fieldHalfWidth"
        >
          <select
            class="input"
            id=":r9:"
            name="startYear"
          >
            <option
              disabled=""
              hidden=""
              value=""
            >
              Select
            </option>
            <option
              value="2024"
            >
              2024
            </option>
            <option
              value="2023"
            >
              2023
            </option>
            <option
              value="2022"
            >
              2022
            </option>
            <option
              value="2021"
            >
              2021
            </option>
            <option
              value="2020"
            >
              2020
            </option>
            <option
              value="2019"
            >
              2019
            </option>
            <option
              value="2018"
            >
              2018
            </option>
            <option
              value="2017"
            >
              2017
            </option>
            <option
              value="2016"
            >
              2016
            </option>
            <option
              value="2015"
            >
              2015
            </option>
            <option
              value="2014"
            >
              2014
            </option>
            <option
              value="2013"
            >
              2013
            </option>
            <option
              value="2012"
            >
              2012
            </option>
            <option
              value="2011"
            >
              2011
            </option>
            <option
              value="2010"
            >
              2010
            </option>
            <option
              value="2009"
            >
              2009
            </option>
            <option
              value="2008"
            >
              2008
            </option>
            <option
              value="2007"
            >
              2007
            </option>
            <option
              value="2006"
            >
              2006
            </option>
            <option
              value="2005"
            >
              2005
            </option>
            <option
              value="2004"
            >
              2004
            </option>
            <option
              value="2003"
            >
              2003
            </option>
            <option
              value="2002"
            >
              2002
            </option>
            <option
              value="2001"
            >
              2001
            </option>
            <option
              value="2000"
            >
              2000
            </option>
            <option
              value="1999"
            >
              1999
            </option>
            <option
              value="1998"
            >
              1998
            </option>
            <option
              value="1997"
            >
              1997
            </option>
            <option
              value="1996"
            >
              1996
            </option>
            <option
              value="1995"
            >
              1995
            </option>
            <option
              value="1994"
            >
              1994
            </option>
            <option
              value="1993"
            >
              1993
            </option>
            <option
              value="1992"
            >
              1992
            </option>
            <option
              value="1991"
            >
              1991
            </option>
            <option
              value="1990"
            >
              1990
            </option>
            <option
              value="1989"
            >
              1989
            </option>
            <option
              value="1988"
            >
              1988
            </option>
            <option
              value="1987"
            >
              1987
            </option>
            <option
              value="1986"
            >
              1986
            </option>
            <option
              value="1985"
            >
              1985
            </option>
            <option
              value="1984"
            >
              1984
            </option>
            <option
              value="1983"
            >
              1983
            </option>
            <option
              value="1982"
            >
              1982
            </option>
            <option
              value="1981"
            >
              1981
            </option>
            <option
              value="1980"
            >
              1980
            </option>
            <option
              value="1979"
            >
              1979
            </option>
            <option
              value="1978"
            >
              1978
            </option>
            <option
              value="1977"
            >
              1977
            </option>
            <option
              value="1976"
            >
              1976
            </option>
            <option
              value="1975"
            >
              1975
            </option>
            <option
              value="1974"
            >
              1974
            </option>
            <option
              value="1973"
            >
              1973
            </option>
            <option
              value="1972"
            >
              1972
            </option>
            <option
              value="1971"
            >
              1971
            </option>
            <option
              value="1970"
            >
              1970
            </option>
            <option
              value="1969"
            >
              1969
            </option>
            <option
              value="1968"
            >
              1968
            </option>
            <option
              value="1967"
            >
              1967
            </option>
            <option
              value="1966"
            >
              1966
            </option>
            <option
              value="1965"
            >
              1965
            </option>
            <option
              value="1964"
            >
              1964
            </option>
            <option
              value="1963"
            >
              1963
            </option>
            <option
              value="1962"
            >
              1962
            </option>
            <option
              value="1961"
            >
              1961
            </option>
            <option
              value="1960"
            >
              1960
            </option>
            <option
              value="1959"
            >
              1959
            </option>
            <option
              value="1958"
            >
              1958
            </option>
            <option
              value="1957"
            >
              1957
            </option>
            <option
              value="1956"
            >
              1956
            </option>
            <option
              value="1955"
            >
              1955
            </option>
            <option
              value="1954"
            >
              1954
            </option>
            <option
              value="1953"
            >
              1953
            </option>
            <option
              value="1952"
            >
              1952
            </option>
            <option
              value="1951"
            >
              1951
            </option>
            <option
              value="1950"
            >
              1950
            </option>
          </select>
          <div
            class="icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,16c-0.3,0-0.5-0.1-0.7-0.3l-6-6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l5.3,5.3l5.3-5.3c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-6,6C12.5,15.9,12.3,16,12,16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="control display-inline-block width-1/2 paddingLeft-1"
        role="group"
      >
        <label
          class="label"
          for=":ra:"
        >
          Year Earned
        </label>
        <div
          class="root primary md fluid md fieldHalfWidth"
        >
          <select
            class="input"
            id=":ra:"
            name="yearEarned"
          >
            <option
              disabled=""
              hidden=""
              value=""
            >
              Select
            </option>
            <option
              value="2024"
            >
              2024
            </option>
            <option
              value="2023"
            >
              2023
            </option>
            <option
              value="2022"
            >
              2022
            </option>
            <option
              value="2021"
            >
              2021
            </option>
            <option
              value="2020"
            >
              2020
            </option>
            <option
              value="2019"
            >
              2019
            </option>
            <option
              value="2018"
            >
              2018
            </option>
            <option
              value="2017"
            >
              2017
            </option>
            <option
              value="2016"
            >
              2016
            </option>
            <option
              value="2015"
            >
              2015
            </option>
            <option
              value="2014"
            >
              2014
            </option>
            <option
              value="2013"
            >
              2013
            </option>
            <option
              value="2012"
            >
              2012
            </option>
            <option
              value="2011"
            >
              2011
            </option>
            <option
              value="2010"
            >
              2010
            </option>
            <option
              value="2009"
            >
              2009
            </option>
            <option
              value="2008"
            >
              2008
            </option>
            <option
              value="2007"
            >
              2007
            </option>
            <option
              value="2006"
            >
              2006
            </option>
            <option
              value="2005"
            >
              2005
            </option>
            <option
              value="2004"
            >
              2004
            </option>
            <option
              value="2003"
            >
              2003
            </option>
            <option
              value="2002"
            >
              2002
            </option>
            <option
              value="2001"
            >
              2001
            </option>
            <option
              value="2000"
            >
              2000
            </option>
            <option
              value="1999"
            >
              1999
            </option>
            <option
              value="1998"
            >
              1998
            </option>
            <option
              value="1997"
            >
              1997
            </option>
            <option
              value="1996"
            >
              1996
            </option>
            <option
              value="1995"
            >
              1995
            </option>
            <option
              value="1994"
            >
              1994
            </option>
            <option
              value="1993"
            >
              1993
            </option>
            <option
              value="1992"
            >
              1992
            </option>
            <option
              value="1991"
            >
              1991
            </option>
            <option
              value="1990"
            >
              1990
            </option>
            <option
              value="1989"
            >
              1989
            </option>
            <option
              value="1988"
            >
              1988
            </option>
            <option
              value="1987"
            >
              1987
            </option>
            <option
              value="1986"
            >
              1986
            </option>
            <option
              value="1985"
            >
              1985
            </option>
            <option
              value="1984"
            >
              1984
            </option>
            <option
              value="1983"
            >
              1983
            </option>
            <option
              value="1982"
            >
              1982
            </option>
            <option
              value="1981"
            >
              1981
            </option>
            <option
              value="1980"
            >
              1980
            </option>
            <option
              value="1979"
            >
              1979
            </option>
            <option
              value="1978"
            >
              1978
            </option>
            <option
              value="1977"
            >
              1977
            </option>
            <option
              value="1976"
            >
              1976
            </option>
            <option
              value="1975"
            >
              1975
            </option>
            <option
              value="1974"
            >
              1974
            </option>
            <option
              value="1973"
            >
              1973
            </option>
            <option
              value="1972"
            >
              1972
            </option>
            <option
              value="1971"
            >
              1971
            </option>
            <option
              value="1970"
            >
              1970
            </option>
            <option
              value="1969"
            >
              1969
            </option>
            <option
              value="1968"
            >
              1968
            </option>
            <option
              value="1967"
            >
              1967
            </option>
            <option
              value="1966"
            >
              1966
            </option>
            <option
              value="1965"
            >
              1965
            </option>
            <option
              value="1964"
            >
              1964
            </option>
            <option
              value="1963"
            >
              1963
            </option>
            <option
              value="1962"
            >
              1962
            </option>
            <option
              value="1961"
            >
              1961
            </option>
            <option
              value="1960"
            >
              1960
            </option>
            <option
              value="1959"
            >
              1959
            </option>
            <option
              value="1958"
            >
              1958
            </option>
            <option
              value="1957"
            >
              1957
            </option>
            <option
              value="1956"
            >
              1956
            </option>
            <option
              value="1955"
            >
              1955
            </option>
            <option
              value="1954"
            >
              1954
            </option>
            <option
              value="1953"
            >
              1953
            </option>
            <option
              value="1952"
            >
              1952
            </option>
            <option
              value="1951"
            >
              1951
            </option>
            <option
              value="1950"
            >
              1950
            </option>
          </select>
          <div
            class="icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,16c-0.3,0-0.5-0.1-0.7-0.3l-6-6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l5.3,5.3l5.3-5.3c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-6,6C12.5,15.9,12.3,16,12,16z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="control"
        role="group"
      >
        <label
          class="label"
          for=":rb:"
        >
          Description
        </label>
        <div
          class="root primary md fluid md multiline"
        >
          <textarea
            class="input"
            id=":rb:"
            name="description"
            placeholder="Share some of your learnings and accomplishments"
            rows="4"
            type="text"
          />
        </div>
      </div>
      <div
        class="flexDirection-row justifyContent-center marginTop-8"
      >
        <button
          class="button md text c-primary paddingRight-5 paddingLeft-5"
          type="button"
        >
          Skip
        </button>
        <button
          class="button md solid c-primary disabled flex-1"
          disabled=""
          type="submit"
        >
          Save & Next
        </button>
      </div>
    </form>
  </div>
</div>
`;
